Updated section 2 with new images and loveee youuu content

--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/img1.jpeg":["assets/img1.jpeg"],"assets/img11.jpeg":["assets/img11.jpeg"],"assets/img2.jpeg":["assets/img2.jpeg"],"assets/img22.jpeg":["assets/img22.jpeg"],"assets/img3.jpeg":["assets/img3.jpeg"],"assets/img33.jpeg":["assets/img33.jpeg"],"assets/img4.jpeg":["assets/img4.jpeg"],"assets/img44.jpeg":["assets/img44.jpeg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
